# app/Http/Controllers/BusinessService/BusinessServicesFeedbackController.php
@@ -1,0 +1,39 @@
+<?php
+
+namespace App\Http\Controllers\BusinessService;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+
+class BusinessServicesFeedbackController extends Controller
+{
+	// /**
+    //  * @OA\Get(
+    //  *      path="/api/service-feedbacks/{id}",
+    //  *      operationId="service-feedbacks-id",
+    //  *      security={{"bearerAuth":{}}},
+    //  *      tags={"Service feedback"},
+    //  *      summary="Get service feedback information",
+    //  *      description="Returns service feedback data by id",
+    //  *      @OA\Parameter(
+    //  *          name="id",
+    //  *          description="Service feedback id",
+    //  *          required=true,
+    //  *          in="path",
+    //  *          example=1,
+    //  *          @OA\Schema(
+    //  *              type="integer"
+    //  *          )
+    //  *      ),
+    //  *      @OA\Response(
+    //  *          response=200,
+    //  *          description="Successful operation",
+    //  *          @OA\JsonContent(ref="#/components/schemas/BusinessServiceFeedback")
+    //  *       ),
+    //  * )
+    //  */
+    public function show()
+	{
+		
+	}
+}
