# app/Http/Controllers/BusinessService/BusinessServicesQuestionController.php
@@ -1,7 +1,8 @@
 <?php
 
-namespace App\Http\Controllers;
+namespace App\Http\Controllers\BusinessService;
 
+use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 
 class BusinessServicesQuestionController extends Controller
