# app/Http/Resources/BusinessService/BusinessServiceResource.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Http\Resources\BusinessService;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class BusinessServiceResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return parent::toArray($request);
+    }
+}
